--- a/css/everest_media.css
+++ b/css/everest_media.css
@@ -32,15 +32,22 @@
 		position:fixed;
 		left: -41%;
 		top: 15%;
-		height: 80vh;
 		width: 38%;
 		flex-direction: column;
 		justify-content: left;
-		float: left;
 		margin-left: 15px;
-		margin-top: 5
 	}
-		.menu_list li:first-child{
+	.menu_list li{
+		margin-top: 15px;
+		max-height: auto;
+		background-image: url(../img/panel-box-noise-bg.png);
+    	box-shadow: 0 1px 3px rgba(30, 50, 70, 0.3), inset 0 0 1px rgba(255, 255, 255, 0.15), inset 0 1px 0 rgba(255, 255, 255, 0.12);
+	}
+	.menu_list li a{
+		line-height: 60px;
+		height: auto;
+	}
+	.menu_list li:first-child{
 		display: block;
 	}
 	.hidden_menu_button{
@@ -48,7 +55,6 @@
 		left: 5%;
 		opacity: 1;
 	}
-
 	.left_coll{
 		-webkit-box-shadow: none;
 		box-shadow: none;
@@ -67,6 +73,9 @@
 	}
 	.input_container i:before {
 		left: 10px;
+	}
+	.form_row:nth-child(5){
+		margin-bottom: 70px;
 	}
 
 	/*middle section */
