--- a/css/everest.css
+++ b/css/everest.css
@@ -261,7 +261,6 @@ body{
 	background-image: url(../img/panel-box-noise-bg.png);
 	
 }
-/* transform to hidden menu */
 
 /* search block */
 
@@ -520,20 +519,25 @@ label{
     transition-property: border, background, color, box-shadow, padding;
     font-weight: 300;
 }
-.input_container i{
-	display: inline-block;
-	max-width: 100%;
+.input_container{
 	position: relative;
 }
-.input_container i:before{
-	content: "\f073";
+.input_container i{
+	display: inline-block;
+	height: 0%;
+	width: 0%;
 	position: absolute;
-	top: 50%;
-	left: 5%;
+	top:32%;
+	left: 10px;
 	-webkit-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	-o-transform: translateY(-50%);
-	transform: translateY(-50%);: 
+	transform: translateY(-50%);
+	color: #c6ccd2;
+	pointer-events: none;
+}
+.input_container i:before{
+	content: "\f073";
 }
 .form_coll{
 	width: 45%;
@@ -843,6 +847,7 @@ aside{
 	background: #ffffff;
     color: #5c626b;
     box-shadow: 0 1px 3px rgba(30, 50, 70, 0.3);
+    height: 100%;
 }
 .teaser{
 	margin: -30px -30px 15px -30px;
@@ -1043,6 +1048,7 @@ aside{
 .deal{
 	position: relative;
 	margin-bottom: 15px;
+	white-space: nowrap;
 }
 .deal:last-child{
 	margin-bottom: 2px;
