--- a/css/everest_media.css
+++ b/css/everest_media.css
@@ -98,6 +98,12 @@
 		top: 0.4rem;
     	left: 0.5rem;
 	}
+
+	/* tour styles */
+
+	.signUp{
+		margin-bottom: 15px;
+	}
 }
 @media only screen and (max-width: 480px) {
 	.main_menu ul {
