--- a/css/everest_media.css
+++ b/css/everest_media.css
@@ -25,6 +25,14 @@
     text-transform: capitalize;
 
 }
+
+@media only screen and (max-width: 860px) {
+	.final_word{
+		width: 100%;
+		font-size: 0.8rem;
+		margin-top: -7px;
+	}
+}	
 @media only screen and (max-width: 768px) {
 
 	/* top section */
